2008-01-10  Peter Parente  <parente@cs.unc.edu>

	* plugins/validate.py
	* plugins/validate.glade
	* plugindata/validate/basic.py: Old code for validate plugin

2007-12-03  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.3.

2007-12-01  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py (IPythonView.__init__): Removed a "print".

	* plugins/ipython_view.py (ConsoleView.onKeyPressExtend): Fixed
	strange bug when trying to extend a superclass's method through a 
	callback (bug #500900).
	
2007-11-13  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.2.
	
2007-11-03  Eitan Isaacson  <eitan@ascender.com>

	* src/accerciser.in: Initialized GDK threading, IPython 0.8.* is
	forcing us to do this because it imports ctypes which enables
	Python threading (bug #469427).
	* plugins/ipython_view.py (ConsoleView): De-coupled all caret
	movement and text manipulation in the ConsoleView from the input
	event handling. Without decoupling we get a lockup if threading
	is enabled when a GAIL callback tries to acquire the lock during a 
	GDK event dispatch.

2007-10-29  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.1.

2007-10-12  Eitan Isaacson  <eitan@ascender.com>

	* README: 
	* configure.in: 
	* debian/changelog: Bumped to 1.0.2.

	* NEWS: Updated to 1.0.1.

	* src/lib/accerciser/accerciser.py: Removed _onAccChanged
	callback, and put in a more general selection changed callback in
	main_window.py (bug #484843).
	* src/lib/accerciser/main_window.py: Put in a selection changed
	callback to update the status bar with the current path (bug #484843).
	* src/lib/accerciser/plugin/message.py: Fixed tooltip style issue
	(bug #460071).
	* src/lib/accerciser/prefs_dialog.py: Fixed bug that would not
	alow preferences window to be closed (bug #481176).
