@@ -1,0 +1,4 @@
+plugindatadir = $(datadir)/$(PACKAGE)/plugindata
+plugindata_DATA = \
+	basic.py
+EXTRA_DIST = $(plugindata_DATA)
