@@ -1,3 +1,9 @@
+2008-01-11  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugindata/validate/Makefile.am: 
+	* plugindata/Makefile.am: Added missing Makefile.ams.
+	
+
 2008-01-10  Peter Parente  <parente@cs.unc.edu>
 
 	* plugins/validate.py
